Update code with new image

--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
 										Exploring and analyzing data with Python library like Pandas or Matplotlib to find relationship between attributes and visualize it.
 										Finally, I also use Power BI to create a dashboard.</p>
 								</header>
-								<a  class="image main"><img src="images/covid.png" alt="" /></a>
+								<a  class="image main"><img src="images/project.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/duylocky2k1/Worldometers_Corona_Analysis" class="button large">View project</a></li>
 								</ul>
 							</article>
-
 						<!-- Posts -->
 							<section class="posts">
 								<article>
