--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<li class="active"><a href="index.html">My projects</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/duy-hu%E1%BB%B3nh-qu%E1%BB%91c-b858aa217/" class="icon brands fa-twitter"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/duy-hu%E1%BB%B3nh-qu%E1%BB%91c-b858aa217/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://www.facebook.com/hqduyy/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
@@ -115,27 +115,6 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
@@ -152,19 +131,13 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/duy-hu%E1%BB%B3nh-qu%E1%BB%91c-b858aa217/" class="icon brands fa-twitter"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/duy-hu%E1%BB%B3nh-qu%E1%BB%91c-b858aa217/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://www.facebook.com/hqduyy/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://github.com/duylocky2k1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
 					</footer>
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
-
 			</div>
 
 		<!-- Scripts -->
